fixed bug with next section, alignment issues on income

--- a/styles/main-form.styl
+++ b/styles/main-form.styl
@@ -1,4 +1,4 @@
-$annotationWidth = 200px
+$annotationWidth = 250px
 $centerColMargin = 30px
 
 
@@ -39,6 +39,8 @@ body
   secondaryFont()
   position absolute
   right (-1 * $annotationWidth)
+  border-left 2px solid blue
+  padding-left 5px
   
   &.inset
     // TODO figure this out
@@ -58,6 +60,13 @@ section
 .stdCard
   // background $cardColor !important;
   background rgba(52,152,219,0.2) !important;
+
+.yes-no
+  margin-top 10px
+  margin-bottom 10px
+
+.income md-input-container  
+  margin 0
 
 // .questionMain
   
